--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -63,65 +63,54 @@
 /* #region Root */
 
 :root {
-    --primary-font: 'Jost', sans-serif;
-    --secondary-font: 'Poppins', sans-serif;
-
-    --h1-size: 4rem;
-    --h1-weight: 900;
-    
-    --h2-size: 3rem;
-    --h2-weight: 700;
-
-    --h3-size: 2rem;
-    --h3-weight: 600;
-
-    --h4-size: 1.5rem;
-    --h4-weight: 600;
-
-    --h5-size: 1.2rem;
-    --h5-weight: 600;
-
-    --h6-size: 1rem;
-    --h6-weight: 600;
-    
-    --p-size: 1rem;
-    --p-weight: 400;
-
-    --header-bg-color: #121117;
-    --nav-brand-height: 55px;
-    --top-nav-item-color: #f5f5f5;
-    --nav-item-color: #121117;
-
-    --primary-color: #4528DC;
-    --secondary-color: #57048A;
-
-    --white-color: #f9f9f9;
-    --black-color: #040402;
-    --grey-color: #f3f5f7;
-    --dark-grey-color: #191919;
-
-    --primary-t-color: #f5f5f5;
-    --secondary-t-color: #f5f5f5;
-    --primary-p-color: #8E8E8E;
-    --secondary-p-color: #E1E1E1;
-    --primary-b-color: #f5f5f5;
-    --primary-l-color: rgba(0, 0, 0, .12);
-    --secondary-l-color: rgba(255, 255, 255, 0.12);
-
-    --valid-color: #007a4d;
-    --invalid-color: #e34f4f;
-
-    --primary-bg-color: #09080D;
-    --primary-bg-color-2: #eeeeee;
-    --primary-bg-color-3: #e5e5e5;
-
-    --secondary-bg-color: #040402;
-    --secondary-bg-color-2: #111111;
-    --secondary-bg-color-3: #191919;
-
-    --card-bg-color: #16151A;
-    --footer-bg-color: #121117;
+  --primary-font: 'Jost', sans-serif;
+  --secondary-font: 'Poppins', sans-serif;
+  --h1-size: 4rem;
+  --h1-weight: 900;
+  --h2-size: 3rem;
+  --h2-weight: 700;
+  --h3-size: 2rem;
+  --h3-weight: 600;
+  --h4-size: 1.5rem;
+  --h4-weight: 600;
+  --h5-size: 1.2rem;
+  --h5-weight: 600;
+  --h6-size: 1rem;
+  --h6-weight: 600;
+  --p-size: 1rem;
+  --p-weight: 400;
+  --header-bg-color: #f9f9f9;
+  --nav-brand-height: 55px;
+  --top-nav-item-color: #121117;
+  --nav-item-color: #f9f9f9;
+  --primary-color: rgba(51, 209, 1, 1);
+  --secondary-color: rgba(179, 233, 162, 1);
+  --white-color: #f9f9f9;
+  --black-color: #040402;
+  --grey-color: #f3f5f7;
+  --dark-grey-color: #191919;
+  --primary-t-color: #040402;
+  --secondary-t-color: #040402;
+  --primary-p-color: #8E8E8E;
+  --secondary-p-color: #E1E1E1;
+  --primary-b-color: #040402;
+  --primary-l-color: rgba(0, 0, 0, .12);
+  --secondary-l-color: rgba(0, 0, 0, 0.12);
+  --valid-color: #007a4d;
+  --invalid-color: #e34f4f;
+  --primary-bg-color: #f9f9f9;
+  --primary-bg-color-2: #eeeeee;
+  --primary-bg-color-3: #e5e5e5;
+  --secondary-bg-color: #f5f5f5;
+  --secondary-bg-color-2: #fafafa;
+  --secondary-bg-color-3: #fcfcfc;
+  --card-bg-color: #E0DFDC;
+  --footer-bg-color: #f9f9f9;
+  
+  --text-color: #040402; /* Dark text color for light backgrounds */
 }
+
+
 
 /* #endregion Root */
 
@@ -841,6 +830,11 @@ aside {
         margin-top: 0;
         list-style: none;
     }
+}
+
+.nav-item .btn {
+  background-color: #B3E9A2;
+  color: rgba(56, 45, 33, 0.7);
 }
 
 .list-group {
